--- a/frontend/movies.html
+++ b/frontend/movies.html
@@ -19,7 +19,7 @@
 
     <div class="nav-links">
       <div class="button-wrapper"><a href="watchlist.html" class="nav-link">Watchlist</a></div>
-      <div class="button-wrapper"><button id="logoutBtn" class="logout-btn">Logout</button></div>
+      <div class="button-wrapper"><button id="logoutBtn" class="nav-link">Logout</button></div>
       <div class="button-wrapper"><a href="reviews.html" class="nav-link">Reviews</a></div>
     </div>
   </div>
