Update heading-container mobile layout

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -16,7 +16,7 @@
 <body>
     <!-- Overlay container for headings -->
     <div class="heading-container">
-        <h1>🎬Welcome to <span class="vault">MOVIE VAULT</span></h1>
+        <h1>🎬Welcome <span class="vault">MOVIE VAULT</span></h1>
         <h2 id="typewriter"></h2>
     </div>
 
