--- a/frontend/watchlist.html
+++ b/frontend/watchlist.html
@@ -76,19 +76,76 @@
               <div class="genre-option" data-value="Action">Action</div>
               <div class="genre-option" data-value="Adventure">Adventure</div>
               <div class="genre-option" data-value="Animation">Animation</div>
+              <div class="genre-option" data-value="Biography">Biography</div>
               <div class="genre-option" data-value="Comedy">Comedy</div>
               <div class="genre-option" data-value="Crime">Crime</div>
               <div class="genre-option" data-value="Documentary">Documentary</div>
               <div class="genre-option" data-value="Drama">Drama</div>
               <div class="genre-option" data-value="Family">Family</div>
               <div class="genre-option" data-value="Fantasy">Fantasy</div>
+              <div class="genre-option" data-value="History">History</div>
               <div class="genre-option" data-value="Horror">Horror</div>
+              <div class="genre-option" data-value="Musical">Musical</div>
               <div class="genre-option" data-value="Mystery">Mystery</div>
               <div class="genre-option" data-value="Romance">Romance</div>
               <div class="genre-option" data-value="Sci-Fi">Sci-Fi</div>
+              <div class="genre-option" data-value="Sports">Sports</div>
               <div class="genre-option" data-value="Thriller">Thriller</div>
               <div class="genre-option" data-value="War">War</div>
               <div class="genre-option" data-value="Western">Western</div>
+              <div class="genre-option" data-value="Superhero">Superhero</div>
+              <div class="genre-option" data-value="Slice of Life">Slice of Life</div>
+              <div class="genre-option" data-value="Psychological">Psychological</div>
+              <div class="genre-option" data-value="Suspense">Suspense</div>
+              <div class="genre-option" data-value="Political">Political</div>
+              <div class="genre-option" data-value="Period Drama">Period Drama</div>
+              <div class="genre-option" data-value="Experimental">Experimental</div>
+              <div class="genre-option" data-value="Short Films">Short Films</div>
+              <div class="genre-option" data-value="Reality">Reality</div>
+              <div class="genre-option" data-value="Talk Show">Talk Show</div>
+              <div class="genre-option" data-value="Game Show">Game Show</div>
+              <div class="genre-option" data-value="Action-Comedy">Action-Comedy</div>
+              <div class="genre-option" data-value="Black Comedy">Black Comedy</div>
+              <div class="genre-option" data-value="Dark Fantasy">Dark Fantasy</div>
+              <div class="genre-option" data-value="Paranormal">Paranormal</div>
+              <div class="genre-option" data-value="Teen">Teen</div>
+              <div class="genre-option" data-value="Coming-of-Age">Coming-of-Age</div>
+              <div class="genre-option" data-value="Martial Arts">Martial Arts</div>
+              <div class="genre-option" data-value="Spy/Espionage">Spy/Espionage</div>
+              <div class="genre-option" data-value="Heist">Heist</div>
+              <div class="genre-option" data-value="Survival">Survival</div>
+              <div class="genre-option" data-value="Disaster">Disaster</div>
+              <div class="genre-option" data-value="Cyberpunk">Cyberpunk</div>
+              <div class="genre-option" data-value="Steampunk">Steampunk</div>
+              <div class="genre-option" data-value="Post-Apocalyptic">Post-Apocalyptic</div>
+              <div class="genre-option" data-value="Dystopian">Dystopian</div>
+              <div class="genre-option" data-value="Space Opera">Space Opera</div>
+              <div class="genre-option" data-value="Gothic">Gothic</div>
+              <div class="genre-option" data-value="Tragedy">Tragedy</div>
+              <div class="genre-option" data-value="Legal/Courtroom">Legal/Courtroom</div>
+              <div class="genre-option" data-value="Medical">Medical</div>
+              <div class="genre-option" data-value="Military">Military</div>
+              <div class="genre-option" data-value="Mythology">Mythology</div>
+              <div class="genre-option" data-value="Folklore">Folklore</div>
+              <div class="genre-option" data-value="Historical Fiction">Historical Fiction</div>
+              <div class="genre-option" data-value="Anthology">Anthology</div>
+              <div class="genre-option" data-value="Romantic Comedy (Rom-Com)">Romantic Comedy (Rom-Com)</div>
+              <div class="genre-option" data-value="Drama-Comedy (Dramedy)">Drama-Comedy (Dramedy)</div>
+              <div class="genre-option" data-value="Detective/Whodunit">Detective/Whodunit</div>
+              <div class="genre-option" data-value="Educational">Educational</div>
+              <div class="genre-option" data-value="Stand-Up Comedy">Stand-Up Comedy</div>
+              <div class="genre-option" data-value="Travel">Travel</div>
+              <div class="genre-option" data-value="Cooking/Food">Cooking/Food</div>
+              <div class="genre-option" data-value="Music/Concert">Music/Concert</div>
+              <div class="genre-option" data-value="Dance">Dance</div>
+              <div class="genre-option" data-value="Idol/Pop Culture">Idol/Pop Culture</div>
+              <div class="genre-option" data-value="Ecchi">Ecchi</div>
+              <div class="genre-option" data-value="Mecha">Mecha</div>
+              <div class="genre-option" data-value="Isekai">Isekai</div>
+              <div class="genre-option" data-value="Shonen">Shonen</div>
+              <div class="genre-option" data-value="Shojo">Shojo</div>
+              <div class="genre-option" data-value="Seinen">Seinen</div>
+              <div class="genre-option" data-value="Josei">Josei</div>
             </div>
           </div>
           <input type="hidden" id="selectedGenres" name="selectedGenres">
@@ -102,32 +159,58 @@
             </div>
             <div class="ott-dropdown" id="ottDropdown">
               <div class="ott-option" data-value="Netflix">Netflix</div>
-              <div class="ott-option" data-value="Amazon Prime">Amazon Prime</div>
-              <div class="ott-option" data-value="Disney+">Jio Hotstar</div>
-              <div class="ott-option" data-value="HBO Max">HBO Max</div>
-              <div class="ott-option" data-value="Hulu">Hulu</div>
-              <div class="ott-option" data-value="Apple TV+">Apple TV+</div>
-              <div class="ott-option" data-value="Peacock">Sony Liv</div>
-              <div class="ott-option" data-value="Paramount+">Paramount+</div>
-              <div class="ott-option" data-value="Sun nxt">Sun nxt</div>
-              <div class="ott-option" data-value="Paramount+">LionsGate Play</div>
-              <div class="ott-option" data-value="Crunchyroll">Crunchyroll</div>
-              <div class="ott-option" data-value="Anime times">Amine Times</div>
+              <div class="ott-option" data-value="Amazon Prime Video">Amazon Prime Video</div>
+              <div class="ott-option" data-value="Disney+">Disney+</div>
               <div class="ott-option" data-value="YouTube Premium">YouTube Premium</div>
-              <div class="ott-option" data-value="other" id="otherOTT">Other (Custom)</div>
+              <div class="ott-option" data-value="JioCinema / Disney+ Hotstar">JioCinema / Disney+ Hotstar</div>
+              <div class="ott-option" data-value="WeTV">WeTV</div>
+              <div class="ott-option" data-value="Max (HBO Max)">Max (HBO Max)</div>
+              <div class="ott-option" data-value="iQiyi">iQiyi</div>
+              <div class="ott-option" data-value="Hulu">Hulu</div>
+              <div class="ott-option" data-value="Paramount+">Paramount+</div>
+              <div class="ott-option" data-value="SonyLIV">SonyLIV</div>
+              <div class="ott-option" data-value="ZEE5">ZEE5</div>
+              <div class="ott-option" data-value="MX Player">MX Player</div>
+              <div class="ott-option" data-value="Apple TV+">Apple TV+</div>
+              <div class="ott-option" data-value="Peacock">Peacock</div>
+              <div class="ott-option" data-value="Roku / The Roku Channel">Roku / The Roku Channel</div>
+              <div class="ott-option" data-value="Pluto TV">Pluto TV</div>
+              <div class="ott-option" data-value="Plex">Plex</div>
+              <div class="ott-option" data-value="Twitch">Twitch</div>
+              <div class="ott-option" data-value="TikTok TV">TikTok TV</div>
+              <div class="ott-option" data-value="Hoichoi">Hoichoi</div>
+              <div class="ott-option" data-value="Eros Now">Eros Now</div>
+              <div class="ott-option" data-value="ALTBalaji (ALTT)">ALTBalaji (ALTT)</div>
+              <div class="ott-option" data-value="Voot">Voot</div>
+              <div class="ott-option" data-value="Aha">Aha</div>
+              <div class="ott-option" data-value="Sun NXT">Sun NXT</div>
+              <div class="ott-option" data-value="Discovery+">Discovery+</div>
+              <div class="ott-option" data-value="DocuBay">DocuBay</div>
+              <div class="ott-option" data-value="ManoramaMAX">ManoramaMAX</div>
+              <div class="ott-option" data-value="ShemarooMe">ShemarooMe</div>
+              <div class="ott-option" data-value="Hungama Play">Hungama Play</div>
+              <div class="ott-option" data-value="Lionsgate Play">Lionsgate Play</div>
+              <div class="ott-option" data-value="Apple iTunes Movies">Apple iTunes Movies</div>
+              <div class="ott-option" data-value="Google TV (Movies & Shows)">Google TV (Movies & Shows)</div>
+              <div class="ott-option" data-value="Crunchyroll">Crunchyroll</div>
+              <div class="ott-option" data-value="HIDIVE">HIDIVE</div>
+              <div class="ott-option" data-value="RetroCrush">RetroCrush</div>
+              <div class="ott-option" data-value="Anime Box">Anime Box</div>
+              <div class="ott-option" data-value="d-anime Store">d-anime Store</div>
+              <div class="ott-option" data-value="Abema">Abema</div>
+              <div class="ott-option" data-value="Bilibili">Bilibili</div>
+              <div class="ott-option" data-value="Kanopy">Kanopy</div>
+              <div class="ott-option" data-value="Anime Times">Anime Times</div>
             </div>
           </div>
-          <div class="custom-ott-input" id="customOTTInput" style="display: none;">
-            <input type="text" id="customOTTPlatform" placeholder="Enter custom platform name">
-            <button type="button" id="addCustomOTT" class="btn-add-custom">Add</button>
-          </div>
+
           <input type="hidden" id="selectedOTT" name="selectedOTT">
         </div>
 
         <div class="form-row">
           <div class="form-group">
             <label for="releaseYear">Release Year</label>
-            <input type="number" id="releaseYear" name="releaseYear" placeholder="2024" min="1900" max="2030" required>
+            <input type="number" id="releaseYear" name="releaseYear" placeholder="2024" min="1800" max="2100" required>
           </div>
           <div class="form-group">
             <label for="rating">IMDB Rating (0-10)</label>
@@ -223,8 +306,13 @@
             <button type="button" class="star" data-value="3">★</button>
             <button type="button" class="star" data-value="4">★</button>
             <button type="button" class="star" data-value="5">★</button>
+            <button type="button" class="star" data-value="6">★</button>
+            <button type="button" class="star" data-value="7">★</button>
+            <button type="button" class="star" data-value="8">★</button>
+            <button type="button" class="star" data-value="9">★</button>
+            <button type="button" class="star" data-value="10">★</button>
           </div>
-          <input type="hidden" id="moveRatingValue" value="5">
+          <input type="hidden" id="moveRatingValue" value="10">
         </div>
         <div class="form-group">
           <label>Write a Review (optional)</label>
@@ -356,8 +444,6 @@
       selectedOTT = [];
       updateGenreDisplay();
       updateOTTDisplay();
-      document.getElementById('customOTTInput').style.display = 'none';
-      document.getElementById('customOTTPlatform').value = '';
       
       // Clear dropdown selections
       document.querySelectorAll('.genre-option, .ott-option').forEach(option => {
@@ -431,6 +517,18 @@
         return;
       }
 
+      // Validate release year
+      if (isNaN(movieData.releaseYear) || movieData.releaseYear < 1800 || movieData.releaseYear > 2100) {
+        showNotification('Release year must be between 1800 and 2100', 'error');
+        return;
+      }
+
+      // Validate rating
+      if (movieData.rating < 0 || movieData.rating > 11) {
+        showNotification('Rating must be between 0 and 11', 'error');
+        return;
+      }
+
       try {
         const url = isEdit ? `/api/movies/${movieId}` : '/api/movies';
         const method = isEdit ? 'PUT' : 'POST';
@@ -462,6 +560,7 @@
         }
       } catch (error) {
         console.error('Error saving movie:', error);
+        console.error('Movie data:', movieData);
         showNotification('Failed to save movie. Please try again.', 'error');
       }
     });
@@ -508,8 +607,8 @@
           <p class="movie-year">${movie.releaseYear}</p>
           ${genresHtml}
           <div class="movie-rating">
-            <span class="stars">${'★'.repeat(Math.floor(movie.rating || 0))}${'☆'.repeat(10 - Math.floor(movie.rating || 0))}</span>
-            <span class="rating-text">${movie.rating || 0}/10</span>
+            <span class="stars">${'★'.repeat(Math.floor(movie.rating || 0))}${'☆'.repeat(11 - Math.floor(movie.rating || 0))}</span>
+            <span class="rating-text">${movie.rating || 0}/11</span>
           </div>
           <div class="movie-description">
             ${descriptionPreview}
@@ -519,7 +618,7 @@
           <div class="movie-actions">
             <button class="btn-edit" onclick="editMovie('${movie._id || movie.id}', event)">Edit</button>
             <button class="btn-delete" onclick="deleteMovie('${movie._id || movie.id}', event)">Delete</button>
-            <button class="btn-primary" onclick="moveToReview('${movie._id || movie.id}', event)">Move to Review</button>
+            <button class="btn-primary" onclick=('${movie._id || movie.id}', event)">Move to Review</button>
           </div>
         </div>
       `;
@@ -865,16 +964,13 @@
     // Dynamic OTT Selector
     const ottSelector = document.getElementById('selectedOTTDisplay');
     const ottDropdown = document.getElementById('ottDropdown');
-    const customOTTInput = document.getElementById('customOTTInput');
-    const customOTTField = document.getElementById('customOTTPlatform');
-    const addCustomOTTBtn = document.getElementById('addCustomOTT');
 
     ottSelector.addEventListener('click', () => {
       ottDropdown.classList.toggle('active');
     });
 
     document.addEventListener('click', (e) => {
-      if (!ottSelector.contains(e.target) && !ottDropdown.contains(e.target) && !customOTTInput.contains(e.target)) {
+      if (!ottSelector.contains(e.target) && !ottDropdown.contains(e.target)) {
         ottDropdown.classList.remove('active');
       }
     });
@@ -882,11 +978,6 @@
     ottDropdown.addEventListener('click', (e) => {
       if (e.target.classList.contains('ott-option')) {
         const platform = e.target.dataset.value;
-        if (platform === 'other') {
-          customOTTInput.style.display = 'flex';
-          customOTTField.focus();
-          return;
-        }
         
         if (selectedOTT.includes(platform)) {
           selectedOTT = selectedOTT.filter(p => p !== platform);
@@ -896,24 +987,6 @@
           e.target.classList.add('selected');
         }
         updateOTTDisplay();
-      }
-    });
-
-    addCustomOTTBtn.addEventListener('click', () => {
-      const customPlatform = customOTTField.value.trim();
-      if (customPlatform && !selectedOTT.includes(customPlatform)) {
-        selectedOTT.push(customPlatform);
-        updateOTTDisplay();
-        customOTTField.value = '';
-        customOTTInput.style.display = 'none';
-      }
-    });
-
-    // Allow Enter key to add custom OTT platform
-    customOTTField.addEventListener('keypress', (e) => {
-      if (e.key === 'Enter') {
-        e.preventDefault();
-        addCustomOTTBtn.click();
       }
     });
 
@@ -1135,4 +1208,5 @@
   </script>
 </body>
 
+</html>
 </html>
