--- a/frontend/reviews.html
+++ b/frontend/reviews.html
@@ -330,7 +330,7 @@
           </div>
           <div class="details-row full-width" id="detailsReviewTextRow" style="display:none;">
             <span class="details-label">Your Review:</span>
-            <p id="detailsReviewText"></p>
+            <p class="detailsReviewText" id="detailsReviewText"></p>
           </div>
           <div class="details-row full-width" id="detailsProsConsRow" style="display:none;">
             <span class="details-label">Notes:</span>
